# BackupWise

./: Cargo.toml  README.md  backup  backup.cpp  build.rs  copy_dir_to.h  log.txt  main  main.c  main.cpp
cpp_src/: Makefile  config.cpp  config.json  directory_selector.cpp  event_backup_option.cpp  event_checker.cpp  event_compression.cpp  event_handler.cpp  event_notification.cpp  event_selector.cpp  log.cpp  log.txt  main.cpp
cpp_src/include/: backup_options.h  compression.h  config.h  directory_selector.h  event_checker.h  event_handler.h  log.h  notification.h  zenity_selector.h
src/: lib.rs  main.rs
